navbar: Fix navbar overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
 
 @layer base {
   body {
-    @apply font-["Montserrat",sans-serif] bg-[var(--navy-blue)] text-white overflow-x-hidden;
+    @apply font-["Montserrat",sans-serif] bg-[var(--navy-blue)] text-white max-w-[100vw] overflow-x-hidden;
   }
   a:not(.btn, .back-btn):hover,
   a:not(.btn, .back-btn).active,
